# LiteRT

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  NOTICE  README.md
.cargo/: config.toml
.github/workflows/: build-litert-lm-wasm.yml  build-litert-lm.yml  build-litert-wasm.yml  ci.yml  release.yml
litert/: Cargo.toml  README.md  build.rs
litert-lm/: Cargo.toml  README.md  build.rs
litert-lm-sys/: Cargo.toml  README.md  build.rs  wrapper.h
litert-lm-sys/src/: lib.rs
litert-lm-sys/src/bindings/: aarch64-apple-darwin.rs  aarch64-linux-android.rs
litert-lm/examples/: llm_generate.rs  vision.rs
litert-lm/src/: conversation.rs  engine.rs  error.rs  input.rs  lib.rs  sampler.rs  session.rs
litert-sys/: Cargo.toml  README.md  build.rs  wrapper.h
litert-sys/src/: lib.rs
litert-sys/src/bindings/: aarch64-apple-darwin.rs  wasm32-unknown-emscripten.rs  x86_64-linux-android.rs
litert-sys/tests/: smoke.rs
litert/examples/: add_cpu.rs  add_gpu.rs  add_wasm.rs  image_classification.rs
litert/src/: compiled_model.rs  element_type.rs  environment.rs  error.rs  lib.rs  logging.rs  model.rs  options.rs  signature.rs  tensor_buffer.rs
litert/tests/: inference.rs  inference_gpu.rs  lifecycle.rs
wasm-patches/litert-lm-v0.10.2/: 01-cmake-emscripten-support.patch  01-prebuild-orchestrator-bug.md  README.md
wasm-patches/litert-lm-v0.10.2/cmake/scripts/: patch_libpng_pngpriv.cmake  patch_litert_api_skew.cmake  patch_litert_cc_options.cmake  patch_llm_executor_settings.cmake  patch_swap_main_to_aggregator.cmake
wasm-patches/litert-v2.1.4/: 01-cmake-emscripten-support.patch  README.md
wasm-patches/local-build/: Dockerfile  run-build.sh
xtask/: Cargo.toml
xtask/src/: main.rs
