[workspace]
resolver = "2"
members = [
    "litert-sys",
    "litert",
    "litert-lm-sys",
    "litert-lm",
    "xtask",
]

[workspace.package]
version       = "0.1.0"
edition       = "2021"
rust-version  = "1.75"
license       = "Apache-2.0"
repository    = "https://github.com/offbit-ai/LiteRT"
homepage      = "https://github.com/offbit-ai/LiteRT"
documentation = "https://docs.rs/litert"
authors       = ["LiteRT-rs Contributors"]
readme        = "README.md"
keywords      = ["litert", "tflite", "tensorflow", "ml", "inference"]
categories    = ["api-bindings", "science"]

[workspace.dependencies]
litert-sys    = { version = "0.1.0", path = "litert-sys" }
litert        = { version = "0.1.0", path = "litert" }
litert-lm-sys = { version = "0.1.0", path = "litert-lm-sys" }
litert-lm     = { version = "0.1.0", path = "litert-lm" }

thiserror   = "1"
libloading  = "0.8"

# Build-time deps shared by -sys crates. ureq uses pure-Rust rustls so the
# build doesn't need libssl-dev (important for cross containers).
ureq       = { version = "2", default-features = false, features = ["tls"] }
sha2       = "0.10"
zip        = "0.6"
tar        = "0.4"
flate2     = "1"
dirs       = "5"
bindgen    = "0.69"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto           = "thin"
codegen-units = 1
