[package]
name        = "litert-lm-sys"
description = "Raw FFI bindings to Google's LiteRT-LM on-device LLM engine C API."
readme      = "README.md"
keywords    = ["litert", "llm", "inference", "bindings", "ffi"]
categories  = ["external-ffi-bindings", "science"]
include     = [
    "Cargo.toml",
    "README.md",
    "build.rs",
    "wrapper.h",
    "src/**/*.rs",
    "third_party/**/*.h",
]
version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
repository.workspace    = true
homepage.workspace      = true
documentation.workspace = true
authors.workspace       = true
links       = "LiteRtLm"

[features]
default           = []
# Opt-in for maintainers regenerating bindings from the vendored LiteRT-LM
# C API headers under `third_party/litert-lm-v<ver>/c/`. Requires libclang.
generate-bindings = ["dep:bindgen"]

[dependencies]
# The LM engine shared lib depends on the base LiteRT runtime at load time.
# This dep ensures litert-sys's libLiteRt is linked and its cache dir is
# available via DEP_LITERT_LIB_DIR for rpath propagation.
litert-sys = { workspace = true }

[build-dependencies]
bindgen    = { workspace = true, optional = true }
ureq       = { workspace = true }
sha2       = { workspace = true }
dirs       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tar        = { workspace = true }
flate2     = { workspace = true }
