[package]
name        = "litert-lm"
description = "Safe, idiomatic Rust bindings to Google's LiteRT-LM on-device LLM engine."
build       = "build.rs"
readme      = "README.md"
keywords    = ["litert", "llm", "gemma", "inference", "ml"]
categories  = ["api-bindings", "science"]
version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
repository.workspace    = true
homepage.workspace      = true
documentation.workspace = true
authors.workspace       = true

[dependencies]
litert-lm-sys = { workspace = true }
litert-sys    = { workspace = true }
thiserror     = { workspace = true }

[dev-dependencies]
ureq = { workspace = true }
