[package]
name        = "litert-sys"
description = "Raw FFI bindings to Google's LiteRT (TFLite) C API."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
links       = "LiteRt"

[features]
default           = []
# Opt-in for maintainers regenerating bindings from vendored headers. Requires libclang.
generate-bindings = ["dep:bindgen"]
# Skip emitting `-lLiteRt` — used for `cargo doc` or downstream crates that
# link LiteRt via a different manifest entry.
skip-link         = []

[build-dependencies]
bindgen    = { workspace = true, optional = true }
ureq       = { workspace = true }
sha2       = { workspace = true }
dirs       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
