[package]
name        = "litert-sys"
description = "Raw FFI bindings to Google's LiteRT (TFLite) C API."
readme      = "README.md"
keywords    = ["litert", "tflite", "tensorflow", "bindings", "ffi"]
categories  = ["external-ffi-bindings", "science"]
include     = [
    "Cargo.toml",
    "README.md",
    "build.rs",
    "wrapper.h",
    "src/**/*.rs",
    # Vendored LiteRT C API headers — needed only when `generate-bindings`
    # is active, but shipped alongside so the feature works out of the box.
    "third_party/**/*.h",
    "third_party/**/*.h.in",
    "third_party/**/LICENSE",
]
version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
repository.workspace    = true
homepage.workspace      = true
documentation.workspace = true
authors.workspace       = true
links       = "LiteRt"

[features]
default           = []
# Opt-in for maintainers regenerating bindings from the vendored LiteRT C
# API headers under `third_party/litert-v<ver>/`. Requires libclang at
# build time. End users don't need this — the crate ships pre-generated
# bindings for every supported target under `src/bindings/<target>.rs`.
generate-bindings = ["dep:bindgen"]
# Skip emitting `-lLiteRt` — used for `cargo doc` or downstream crates that
# link LiteRt via a different manifest entry.
skip-link         = []

[build-dependencies]
bindgen    = { workspace = true, optional = true }
ureq       = { workspace = true }
sha2       = { workspace = true }
dirs       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
zip        = { workspace = true }
tar        = { workspace = true }
flate2     = { workspace = true }
