[package]
name        = "litert"
description = "Safe, idiomatic Rust bindings to Google's LiteRT (TFLite) on-device ML runtime."
build       = "build.rs"
readme      = "README.md"
keywords    = ["litert", "tflite", "tensorflow", "ml", "inference"]
categories  = ["api-bindings", "science"]
include     = [
    "Cargo.toml",
    "README.md",
    "build.rs",
    "src/**/*.rs",
    "examples/**/*.rs",
    "tests/**/*.rs",
    "tests/data/*.tflite",
]
version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
repository.workspace    = true
homepage.workspace      = true
documentation.workspace = true
authors.workspace       = true

[dependencies]
litert-sys = { workspace = true }
thiserror  = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libloading = { workspace = true }

# Used by examples that download models — only on native targets.
# Examples gated to wasm32 (e.g. add_wasm) do not pull these in.
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
ureq   = { workspace = true }
tar    = { workspace = true }
flate2 = { workspace = true }
